Added welcome section and one h1 element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
     <h1>Hello World, we are software developers!</h1>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <section id="welcome-section">
 
+      <h1>Welcome to my page :D</h1>
+
+    </section>
     <!--
 
     Hello Camper!
