added the projects

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <h1>Welcome to my page :D</h1>
 
     </section>
+
+    <section id="projects">
+      <p class="project-tile">Projects</p>
+    </section>
     <!--
 
     Hello Camper!
