--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#project-tile">Link</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -55,6 +55,10 @@
       <p class="project-tile">Projects</p>
       <a href="https://github.com/ozovalihasan"> My personal page</a>
     </section>
+
+    <div>
+        <a href="https://github.com/ozovalihasan"> My Profile</a>
+    </div>
     <!--
 
     Hello Camper!
