--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body>
+  <body class="body">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,6 +59,7 @@
     <div>
         <a href="https://github.com/ozovalihasan"> My Profile</a>
     </div>
+    
     <!--
 
     Hello Camper!
